--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,30 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+winit = "0.28"
+env_logger = "0.10"
+wgpu = "0.18.0"
+cfg-if = "1"
+pollster = "0.3.0"
+thiserror = "1.0.50"
+bytemuck = { version = "1.12", features = [ "derive" ] }
+integer-sqrt = "0.1.0"
+
+[dependencies.image]
+version = "0.24"
+default-features = false
+features = ["png", "jpeg"]
+
+[target.'cfg(target_arch = "wasm32")'.dependencies]
+console_error_panic_hook = "0.1.6"
+console_log = "1.0"
+wgpu = { version = "0.18", features = ["webgl"]}
+wasm-bindgen = "0.2"
+wasm-bindgen-futures = "0.4.30"
+web-sys = { version = "0.3", features = [
+    "Document",
+    "Window",
+    "Element",
+    "Location",
+]}
+reqwest = { version = "0.11" }
